k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        track: stable
    spec:
      containers:
        - name: frontend
          image: ghcr.io/setsuko34/greenlogistics-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
            limits:
              memory: "64Mi"
