k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
    track: stable
  ports:
    - port: 80
      targetPort: 80
